--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "@types/node": "^12.12.37",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
+    "axios": "^0.19.2",
+    "intellisense": "0.0.1",
+    "lodash": "^4.17.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "semantic-ui-react": "^0.88.2",
     "typescript": "^3.7.5"
+  },
+  "peerDependencies": {
+    "react": "^0.14.7 || ^15.0.0-0 || ^16.0.0-0",
+    "react-dom": "^0.14.7 || ^15.0.0-0 || ^16.0.0-0"
   },
   "scripts": {
     "start": "react-scripts start",
